--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "babel-plugin-syntax-jsx": "^6.3.13",
     "babel-plugin-syntax-trailing-function-commas": "^6.3.13",
     "babel-plugin-transform-class-properties": "^6.3.13",
+    "babel-plugin-transform-es2015-destructuring": "^6.3.15",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.3.16",
     "babel-plugin-transform-es2015-parameters": "^6.3.26",
     "babel-plugin-transform-react-jsx": "^6.3.13",
     "babel-plugin-transform-strict-mode": "^6.3.13",
@@ -46,11 +48,18 @@
     "gulp-util": "^3.0.7",
     "karma": "^0.13.16",
     "react-hot-loader": "^1.3.0",
+    "redux-devtools": "^3.0.1",
+    "redux-devtools-dock-monitor": "^1.0.1",
+    "redux-devtools-log-monitor": "^1.0.1",
+    "redux-logger": "^2.3.1",
+    "redux-thunk": "^1.0.3",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
     "react": "^0.14.5",
-    "react-dom": "^0.14.5"
+    "react-dom": "^0.14.5",
+    "react-redux": "^4.0.6",
+    "redux": "^3.0.5"
   }
 }
