Added new base for react development

--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "homecomfort-webgui",
   "version": "1.0.0",
-  "description": "WebApp to control the home automation created with Z-Wave and homecomfort.",
+  "description": "WebApp for casa-calida.",
   "main": "app/index.js",
   "scripts": {
+    "start": "gulp",
+    "lint": "eslint .",
     "test": "test"
   },
   "repository": {
@@ -11,10 +13,11 @@
     "url": "git+https://github.com/stefanmayer13/homecomfort-webgui.git"
   },
   "keywords": [
+    "casa-calida",
+    "iot",
+    "smart-home",
     "z-wave",
-    "raspberry",
     "homeautomation",
-    "razberry",
     "automation",
     "web",
     "reactjs"
@@ -24,43 +27,47 @@
   "bugs": {
     "url": "https://github.com/stefanmayer13/homecomfort-webgui/issues"
   },
-  "homepage": "https://github.com/stefanmayer13/homecomfort-webgui#readme",
+  "homepage": "https://www.casa-calida.com",
   "devDependencies": {
-    "babel-loader": "^6.2.2",
-    "babel-plugin-syntax-jsx": "^6.5.0",
-    "babel-plugin-syntax-trailing-function-commas": "^6.5.0",
-    "babel-plugin-transform-class-properties": "^6.5.2",
-    "babel-plugin-transform-es2015-destructuring": "^6.5.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.5.2",
-    "babel-plugin-transform-es2015-parameters": "^6.5.0",
-    "babel-plugin-transform-react-jsx": "^6.5.2",
-    "babel-plugin-transform-strict-mode": "^6.5.2",
-    "babel-register": "^6.5.2",
-    "del": "^2.2.0",
-    "eslint-config-airbnb": "^5.0.1",
-    "eslint-plugin-react": "^3.16.1",
+    "babel-loader": "^6.2.5",
+    "babel-plugin-syntax-jsx": "^6.13.0",
+    "babel-plugin-syntax-trailing-function-commas": "^6.13.0",
+    "babel-plugin-transform-class-properties": "^6.16.0",
+    "babel-plugin-transform-react-jsx": "^6.8.0",
+    "babel-plugin-transform-strict-mode": "^6.11.3",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-register": "^6.16.3",
+    "del": "^2.2.2",
+    "eslint": "^3.8.1",
+    "eslint-config-airbnb": "^12.0.0",
+    "eslint-plugin-import": "^2.0.1",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-react": "^6.4.1",
     "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-eslint": "^2.0.0",
-    "gulp-inline-base64": "^0.1.4",
-    "gulp-sass": "^2.2.0",
-    "gulp-sourcemaps": "^1.6.0",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-eslint": "^3.0.1",
+    "gulp-inline-base64": "^0.1.5",
+    "gulp-sass": "^2.3.2",
+    "gulp-sourcemaps": "^2.1.1",
     "gulp-util": "^3.0.7",
-    "karma": "^0.13.21",
     "react-hot-loader": "^1.3.0",
-    "redux-devtools": "^3.1.1",
-    "redux-devtools-dock-monitor": "^1.0.1",
-    "redux-devtools-log-monitor": "^1.0.4",
-    "redux-logger": "^2.5.2",
-    "redux-thunk": "^1.0.3",
-    "webpack": "^1.12.13",
-    "webpack-dev-server": "^1.14.1"
+    "redux-devtools": "^3.3.1",
+    "redux-devtools-dock-monitor": "^1.1.1",
+    "redux-devtools-log-monitor": "^1.0.11",
+    "redux-logger": "^2.7.0",
+    "redux-thunk": "^2.1.0",
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
-    "moment": "^2.11.2",
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7",
-    "react-redux": "^4.4.0",
-    "redux": "^3.3.1"
+    "keymirror": "^0.1.1",
+    "moment": "^2.15.1",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.8.1",
+    "redux": "^3.6.0",
+    "superagent": "^2.3.0"
   }
 }
