--- a/.babelrc
+++ b/.babelrc
@@ -2,11 +2,10 @@
     "plugins": [
         "syntax-trailing-function-commas",
         "transform-class-properties",
-        "transform-es2015-parameters",
         "transform-strict-mode",
-        "syntax-jsx",
-        "transform-react-jsx",
-        "transform-es2015-modules-commonjs",
-        "transform-es2015-destructuring"
+    ],
+    "presets": [
+        "es2015",
+        "react"
     ]
 }
