--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "homepage": "https://www.casa-calida.com",
   "devDependencies": {
+    "babel-eslint": "^7.1.0",
     "babel-loader": "^6.2.5",
     "babel-plugin-syntax-jsx": "^6.13.0",
     "babel-plugin-syntax-trailing-function-commas": "^6.13.0",
@@ -40,7 +41,6 @@
     "babel-register": "^6.16.3",
     "del": "^2.2.2",
     "eslint": "^3.8.1",
-    "eslint-config-airbnb": "^12.0.0",
     "eslint-plugin-import": "^2.0.1",
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.4.1",
