--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,18 @@
-.idea
-node_modules
-css
-tmp
+/node_modules
+/coverage
+/build
+
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+CreateReactAppREADME.md
+src/config.js
+old
+.vscode
