--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "homecomfort-webgui",
-  "version": "1.0.0",
-  "description": "WebApp for casa-calida.",
+  "name": "casacalida-webgui",
+  "version": "2.0.0",
+  "description": "WebApp for Casa-Calida.",
   "main": "app/index.js",
   "scripts": {
-    "start": "gulp",
-    "lint": "eslint .",
-    "test": "test"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "flow": "flow"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/stefanmayer13/homecomfort-webgui.git"
+    "url": "git+https://github.com/stefanmayer13/casa-calida-webgui.git"
   },
   "keywords": [
     "casa-calida",
@@ -25,50 +27,21 @@
   "author": "Stefan Mayer <stefanmayer13@gmail.com> (http://stefanmayer.me)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/stefanmayer13/homecomfort-webgui/issues"
+    "url": "https://github.com/stefanmayer13/casa-calida-webgui/issues"
   },
   "homepage": "https://www.casa-calida.com",
-  "devDependencies": {
-    "babel-eslint": "^7.1.0",
-    "babel-loader": "^6.2.5",
-    "babel-plugin-syntax-jsx": "^6.13.0",
-    "babel-plugin-syntax-trailing-function-commas": "^6.13.0",
-    "babel-plugin-transform-class-properties": "^6.16.0",
-    "babel-plugin-transform-react-jsx": "^6.8.0",
-    "babel-plugin-transform-strict-mode": "^6.11.3",
-    "babel-preset-es2015": "^6.16.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-register": "^6.16.3",
-    "del": "^2.2.2",
-    "eslint": "^3.8.1",
-    "eslint-plugin-import": "^2.0.1",
-    "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-react": "^6.4.1",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.1",
-    "gulp-eslint": "^3.0.1",
-    "gulp-inline-base64": "^0.1.5",
-    "gulp-sass": "^2.3.2",
-    "gulp-sourcemaps": "^2.1.1",
-    "gulp-util": "^3.0.7",
-    "react-hot-loader": "^1.3.0",
-    "redux-devtools": "^3.3.1",
-    "redux-devtools-dock-monitor": "^1.1.1",
-    "redux-devtools-log-monitor": "^1.0.11",
-    "redux-logger": "^2.7.0",
-    "redux-thunk": "^2.1.0",
-    "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.16.2"
-  },
   "dependencies": {
-    "d3": "^4.3.0",
-    "keymirror": "^0.1.1",
-    "moment": "^2.15.1",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
-    "react-redux": "^4.4.5",
-    "react-router": "^2.8.1",
-    "redux": "^3.6.0",
-    "superagent": "^2.3.0"
+    "amazon-cognito-identity-js": "^1.31.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.0.17",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
+  },
+  "devDependencies": {
+    "flow-bin": "^0.63.1",
+    "redux-logger": "^3.0.6"
   }
 }
